[metadata]
name = pEigen
version = 0.0.2
author = Todd Chapman
author_email = tac688@alumni.stanford.edu
description = Python bindings for Eigen3
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License 
    Operating System :: POSIX
[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
lib = *.so